--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -315,6 +315,6 @@ extra:
           link: https://www.linkedin.com/company/wso2
     site_version: 1.0.0
     #base_path: http://localhost:8000
-    base_path: https://apk.docs.wso2.com/en/latest
+    base_path: https://apk.docs.wso2.com
     envoy_path: https://www.envoyproxy.io/docs/envoy/v1.20.0
 # static_cache_control: "no-cache"
