--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -161,6 +161,10 @@ nav:
         - What is APK?: about-apk/what-is-apk.md
         - About This Release: about-apk/about-this-release.md
         - Architecture: about-apk/architecture.md
+        - Performance Test Results: 
+            - Overview: about-apk/performance-test-results/overview.md
+            - Gateway router with one CPU: about-apk/performance-test-results/gateway-router-with-one-cpu.md
+            - Gateway router with two CPUs: about-apk/performance-test-results/gateway-router-with-two-cpus.md
        #- Key Concepts:
        #    - Key Concept 1: about-apk/key-concepts/key-concept.md
        #    - Key Concept 2: about-apk/key-concepts/key-concept.md
