Doc: Backend JWT Token manipulation

--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -112,6 +112,8 @@ nav:
                     - Via CR: create-api/create-and-attach-api-policies/interceptors/interceptors-via-crs.md
                 - Query manipulation: 
                     - Overview: create-api/create-and-attach-api-policies/query-manipulation/query-manipulation-overview.md
+                - Backend JWT Token Manipulation:
+                    - Overview: create-api/create-and-attach-api-policies/backend-jwt-token-manipulation/backend-jwt-token-manipulation-via-crs.md
            - Rate Limiting:
                 - Overview: create-api/rate-limiting/rate-limiting-policy-overview.md
                 - Simple Rate Limiting:
