Add docs for analytics for ELK stack

--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -215,6 +215,8 @@ nav:
             - Asgardeo: setup/identity-platform/idp/asgardeo-idp.md
             - Auth0: setup/identity-platform/idp/auth0-idp.md
             - Any Third-party IdP: setup/identity-platform/idp/third-party-idp.md
+        - Configure Analytics: 
+            - ELK Stack: setup/configure-analytics-for-elk-stack.md
        #- Install: setup/install.md
        #- Deploy:
        #    - Deployment Patterns: get-started/dummy.md
