--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -169,6 +169,7 @@ nav:
             - Any Third-party IdP: setup/identity-platform/idp/third-party-idp.md
         - Configure Analytics: 
             - Choreo Insights: setup/analytics/configure-analytics-for-choreo-insights.md
+            - Fluent Bit: setup/analytics/configure-analytics-for-fluent-bit.md
             - ELK Stack: setup/analytics/configure-analytics-for-elk-stack.md
        #- Install: setup/install.md
        #- Deploy:
