--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -187,6 +187,8 @@ nav:
         - Configure Analytics: 
             - Choreo Insights: setup/analytics/configure-analytics-for-choreo-insights.md
             - ELK Stack: setup/analytics/configure-analytics-for-elk-stack.md
+        - Configure Listeners:
+            - Configure Gateway Listeners: setup/listeners/configure-gateway-listeners.md
        #- Install: setup/install.md
        #- Deploy:
        #    - Deployment Patterns: get-started/dummy.md
