Add docs for BackendJWT policy configuration via REST API

--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -107,6 +107,7 @@ nav:
                 - Query manipulation: 
                     - Overview: create-api/create-and-attach-api-policies/query-manipulation/query-manipulation-overview.md
                 - Backend JWT Token Manipulation:
+                    - Via REST API: create-api/create-and-attach-api-policies/backend-jwt-token-manipulation/backend-jwt-token-manipulation-via-rest-api.md
                     - Via CR: create-api/create-and-attach-api-policies/backend-jwt-token-manipulation/backend-jwt-token-manipulation-via-crs.md
                 - CORS:
                     - Via REST API: create-api/create-and-attach-api-policies/cors/enable-cors-via-rest-api.md
