adding API Properties docs

--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -131,6 +131,7 @@ nav:
                 - Default Version: develop-and-deploy-api/api-versions/default-version.md
                 - Backward Compatibility: develop-and-deploy-api/api-versions/backward-compatibility.md
             - Define Endpoints: develop-and-deploy-api/endpoints/prod-sand-endpoints.md
+            - Define API Properties: develop-and-deploy-api/api-properties/api-properties.md
     #    - Manage APIs:
     #       - API Documentation: manage-apis/api-documentation.md
     #       - Consumer Management:
