Revamp API Create and deploy flow

--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -87,9 +87,14 @@ nav:
         - Create APIs:
            - Overview: create-api/create-api-overview.md
            - Create and deploy APIs:
-                - Create API from k8s service: create-api/create-and-deploy-apis/create-api-from-k8s-service.md
-                - Create API from API definition: create-api/create-and-deploy-apis/create-api-from-api-definition.md
-                - Create API using CR: create-api/create-and-deploy-apis/create-api-using-cr.md
+                - K8s Native API Development: create-api/create-and-deploy-apis/create-api-using-cr.md
+                - Enhanced API Development:
+                    - Overview: create-api/create-and-deploy-apis/create-api-using-enhanced-flow.md
+                    - Tools for Enhanced API Development: create-api/create-and-deploy-apis/tools-for-api-development.md
+                    - Create and Deploy API:
+                        - Generate APK Configuration file: create-api/create-and-deploy-apis/generate-apk-conf.md
+                        - Generate K8s custom resources and Deploy: create-api/create-and-deploy-apis/create-and-deploy-api.md
+                        - Direct Deploy into K8s Server: create-api/create-and-deploy-apis/direct-deploy.md
            - Manage Service Endpoint:
                 - Manage Certificate: create-api/manage-service-endpoint/manage-certificate.md
                 - Manage Security:
