adding undeploy API doc

--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -95,6 +95,7 @@ nav:
                         - Generate APK Configuration file: create-api/create-and-deploy-apis/generate-apk-conf.md
                         - Generate K8s custom resources and Deploy: create-api/create-and-deploy-apis/create-and-deploy-api.md
                         - Direct Deploy into K8s Server: create-api/create-and-deploy-apis/direct-deploy.md
+                        - Undeploy API: create-api/create-and-deploy-apis/direct-undeploy.md
         - Manage Endpoint:
             - Define Endpoints: develop-and-deploy-api/endpoints/prod-sand-endpoints.md
             - Manage Certificate: create-api/manage-service-endpoint/manage-certificate.md
